force-app/main/default/objects/SR_Sub_Case__c/SR_Sub_Case__c.object-meta.xml
<CustomObject>
    <description>This table maintains the sub case base info, and stored the sub case progress related information</description>
    <label>SR Sub Case</label>
    <nameField>
        <label>Sub Case ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>