force-app/main/default/objects/SR_Sub_Case__c/fields/Acct_Num__c.field-meta.xml
<CustomField>
    <fullName>Acct_Num__c</fullName>
    <label>Acct Num</label>
    <length>80</length>
    <type>Text</type>
</CustomField>