force-app/main/default/objects/SR_Sub_Case__c/fields/Case_Num__c.field-meta.xml
<CustomField>
    <fullName>Case_Num__c</fullName>
    <label>Case Num</label>
    <length>80</length>
    <type>Text</type>
</CustomField>