force-app/main/default/objects/SR_Sub_Case__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>