force-app/main/default/objects/SR_Sub_Case__c/fields/Feedback_Format_Code__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Format_Code__c</fullName>
    <label>Feedback Format Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>