force-app/main/default/objects/SR_Sub_Case__c/fields/Prjority__c.field-meta.xml
<CustomField>
    <fullName>Prjority__c</fullName>
    <label>Prjority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>