force-app/main/default/objects/SR_Sub_Case__c/fields/Srv_Num__c.field-meta.xml
<CustomField>
    <fullName>Srv_Num__c</fullName>
    <description>Mobile number for mobile, TNG Membership ID for Club / Concierge</description>
    <label>Srv Num</label>
    <length>80</length>
    <type>Text</type>
</CustomField>