force-app/main/default/objects/SR_Sub_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>STOP</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
            <value>
                <fullName>CLOSE</fullName>
            </value>
            <value>
                <fullName>RESOLVE</fullName>
            </value>
            <value>
                <fullName>ARCHIVE</fullName>
            </value>
            <value>
                <fullName>REMOVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>