force-app/main/default/objects/SR_Sub_Case__c/fields/Sub_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sub_Case_Owner__c</fullName>
    <label>Sub Case Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>